[project]
name = "integrations-mcp"
version = "0.1.0"
description = "MCP provider integrations service"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "google-auth-httplib2>=0.1.0",
    "boto3>=1.34.0",
    "twilio>=9.0.0",
    "cloudflare>=4.0.0",
    "feedparser>=6.0.0",
    "pyairtable>=2.3.0",
    "datadog-api-client>=2.20.0",
    "huggingface-hub>=0.20.0",
    "stripe>=8.0.0",
    "sendgrid>=6.11.0",
    "atlassian-python-api>=3.41.0",
    "pdpyras>=5.2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
